--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/tom-deman/portfolio#readme",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.12.0",
+    "alpinejs": "^1.9.8",
     "animate.css": "^3.7.2",
     "pug": "^2.0.4",
     "tailwindcss": "^1.1.4"
